--- a/ARABYTAK.APIS/appsettings.json
+++ b/ARABYTAK.APIS/appsettings.json
@@ -7,7 +7,14 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=.;Database=Arabytak;Trusted_Connection=True;encrypt=false"
+    "DefaultConnection": "Server=.;Database=Arabytak;Trusted_Connection=True;encrypt=false",
+    "IDentityConnection": "Server= .;Database=IdentityARABYA;Trusted_Connection=true;encrypt=false;MultipleActiveResultSets=true;"
   },
-  "ApiBaseUrl": "https://localhost:7263"
+  "ApiBaseUrl": "https://localhost:44361",
+  "Token": {
+    "Key": "6IRwMagD3lllNz8LgvOu4+aQo4XL32qKiIGomudu4t4=",
+    "Issuer": "https://localhost:44361/",
+    "Audience": "https://localhost:44361/"
+
+  }
 }
